<resources>
    <string name="app_name">Trivia App</string>
    <string name="what_is_your_name">What is your Name?</string>
    <string name="name">Name</string>
    <string name="who_is_the_best_cricketer_in_the_world">Who is the best cricketer in the world?</string>
    <string name="a_sachin_tendulkar">A.) Sachin Tendulkar</string>
    <string name="b_virat_kolli">B.) Virat Kolli</string>
    <string name="c_adam_gilchirst">C.) Adam Gilchirst</string>
    <string name="d_jacques_kallis">D.) Jacques Kallis</string>
    <string name="next">NEXT</string>
    <string name="what_are_the_colors_in_the_indian_national_flag">What are the colors in the Indian national flag?</string>
    <string name="d_green">D) Green</string>
    <string name="c_orange">C) Orange</string>
    <string name="b_yellow">B) Yellow</string>
    <string name="a_white">A) White</string>
    <string name="summary">SUMMARY</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>
    <string name="here_are_the_answers_selected">Here are the answers selected:</string>
    <string name="hello">Hello</string>
    <string name="answer">Answer:</string>
    <string name="answers">Answers:</string>
    <string name="text_name_cant_be_empty">Name cannot be empty</string>
    <string name="color_green">Green</string>
    <string name="text_orange">Orange</string>
    <string name="text_white">White</string>
    <string name="text_yellow">Yellow</string>
    <string name="text_select_more_than_one_item">Please select more than 1 items</string>
    <string name="text_adam_gilchrist">Adam Gilchirst</string>
    <string name="text_jack_kallis">Jacques Kallis</string>
    <string name="text_sachin_tendulakr">Sachin Tendulkar</string>
    <string name="text_virat_kohli">Virat Kolli</string>
    <string name="text_select_a_player_name">Please select a Player\'s name</string>
</resources>