<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.BestCricketerFragment">

    <TextView
        android:id="@+id/text_best_cricketer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/who_is_the_best_cricketer_in_the_world"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_cricketers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/radio_group_cricketers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_best_cricketer">

        <RadioButton
            android:id="@+id/radio_sachin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_sachin_tendulkar"
            android:textColor="?android:attr/textColorPrimary" />

        <RadioButton
            android:id="@+id/radio_virat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_virat_kolli"
            android:textColor="?android:attr/textColorPrimary" />

        <RadioButton
            android:id="@+id/radio_adam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_adam_gilchirst"
            android:textColor="?android:attr/textColorPrimary" />

        <RadioButton
            android:id="@+id/radio_jacques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d_jacques_kallis"
            android:textColor="?android:attr/textColorPrimary" />

    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_cricketers" />

</androidx.constraintlayout.widget.ConstraintLayout>