<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.IndianFlagFragment">

    <TextView
        android:id="@+id/text_best_cricketer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/what_are_the_colors_in_the_indian_national_flag"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_white"
        app:layout_constraintVertical_chainStyle="packed" />

    <CheckBox
        android:id="@+id/checkbox_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_white"
        android:layout_marginStart="16dp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_best_cricketer" />

    <CheckBox
        android:id="@+id/checkbox_yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_yellow"
        android:layout_marginStart="16dp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_orange"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_white" />

    <CheckBox
        android:id="@+id/checkbox_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_orange"
        android:layout_marginStart="16dp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_green"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_yellow" />

    <CheckBox
        android:id="@+id/checkbox_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_green"
        android:layout_marginStart="16dp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_orange" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>