<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.summary.SummaryFragment">

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/summary"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif"
        android:textColor="?android:attr/textColorPrimary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_hello_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Hello Anmol"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_summary" />

    <TextView
        android:id="@+id/text_answers_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here_are_the_answers_selected"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hello_name" />

    <TextView
        android:id="@+id/text_best_cricketer_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_is_the_best_cricketer_in_the_world"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_answers_selected" />

    <TextView
        android:id="@+id/text_best_cricketer_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Answer: Sachin Tendulkar"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_best_cricketer_question" />

    <TextView
        android:id="@+id/text_flag_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_are_the_colors_in_the_indian_national_flag"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_best_cricketer_answer" />

    <TextView
        android:id="@+id/text_flag_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Answers: Orange, white, Green"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="4dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_flag_question" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/text_flag_answer"
        app:layout_constraintBottom_toTopOf="@+id/button_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/button_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>